Use AsyncPlayerPreLoginEvent instead of PlayerLoginEvent because of its deprecation in Paper 1.21.6, this event disabled re-configuration APIs when a listener is registered for it; we don't want that to happen